@@ -50,8 +50,8 @@
 		<!-- Bouncy Castle cryptographic algorithms -->
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
-			<artifactId>bcprov-jdk15on</artifactId>
-			<version>1.70</version>
+			<artifactId>bcpkix-jdk15on</artifactId>
+			<version>1.64</version>
 		</dependency>
 
 	</dependencies>
@@ -68,17 +68,6 @@
 							<artifactId>lombok</artifactId>
 						</exclude>
 					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>9</source>
-					<target>9</target>
-					<release combine.self="override"></release>
-					<compilerArgs>
-						<arg>--add-exports</arg><arg>java.base/sun.security.x509=ALL-UNNAMED</arg>
-					</compilerArgs>
 				</configuration>
 			</plugin>
 		</plugins>
